# OpenGov-Grants

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: initial_schema.py
src/opengovgrants/: __init__.py  cli.py
src/opengovgrants/core/: audit.py  config.py  database.py  database_manager.py  database_optimization.py  dependencies.py  exceptions.py  locking.py  rbac.py  security.py  validation.py  validation_middleware.py
src/opengovgrants/models/: database.py  item.py
src/opengovgrants/repositories/: application_repository.py  base_repository.py  grant_repository.py  user_repository.py
src/opengovgrants/schemas/: __init__.py  application_schemas.py  grant_schemas.py  user_schemas.py
src/opengovgrants/services/: agent_service.py  auth_service.py  ollama_service.py
src/opengovgrants/storage/: item_storage.py
src/opengovgrants/web/: app.py
tests/: conftest.py  test_api.py  test_comprehensive.py  test_core.py
